[package]
name = "hid-kit"
version = "0.1.0"
edition = "2021"
description = "A pure-Rust HID library"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/xiaopengli89/hid-kit"

[dependencies]
thiserror = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.0"
io-kit-sys = "0.4.1"

[target.'cfg(windows)'.dependencies]
regex = "1.11.1"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Devices_DeviceAndDriverInstallation",
] }
